--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -8,5 +8,7 @@
 <body>
     <p> This is a new repo created by me</p>
     <p> This is a new feature - feature2</p>
+    <p> only on feature 2</p>
+
 </body>
 </html>
