--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p> This is a new repo created by me</p>
-    
+    <p> This is a new feature (dropdown)</p>
 
 </body>
 </html>
